[gd_scene load_steps=32 format=3 uid="uid://gvsvj3b4v1nf"]

[ext_resource type="Texture2D" uid="uid://c62jr2m3h72e2" path="res://icon.svg" id="1_7ao7v"]
[ext_resource type="Script" path="res://test_character.gd" id="1_spkl0"]
[ext_resource type="Texture2D" uid="uid://bnw8ytjonwism" path="res://lobterassets/lobterdashnoclaw.png" id="2_2fwx4"]
[ext_resource type="Texture2D" uid="uid://snkdiixfyjej" path="res://lobterassets/lobterwalk.png" id="2_55ax7"]
[ext_resource type="Texture2D" uid="uid://cglta6tjk3ogl" path="res://lobterassets/lobterdashoneclaw.png" id="3_sehvh"]
[ext_resource type="Texture2D" uid="uid://bv1trratfm1xa" path="res://lobterassets/lobterdash.png" id="4_jxcxa"]
[ext_resource type="Script" path="res://animated_sprite_2d.gd" id="7_852w0"]
[ext_resource type="Texture2D" uid="uid://c7uvojjc2w7fo" path="res://lobterassets/lobidle(THIS).png" id="7_luvhc"]
[ext_resource type="AudioStream" uid="uid://c2qnkqwwa3u2x" path="res://sound fx/Lobster Walking.wav" id="10_5ubgf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qc354"]
atlas = ExtResource("2_2fwx4")
region = Rect2(0, 0, 85, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nswtd"]
atlas = ExtResource("2_2fwx4")
region = Rect2(85, 0, 85, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkit2"]
atlas = ExtResource("2_2fwx4")
region = Rect2(170, 0, 85, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bqif"]
atlas = ExtResource("2_2fwx4")
region = Rect2(255, 0, 85, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u65pw"]
atlas = ExtResource("3_sehvh")
region = Rect2(0, 0, 85, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ipgd"]
atlas = ExtResource("3_sehvh")
region = Rect2(85, 0, 85, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cd0ya"]
atlas = ExtResource("3_sehvh")
region = Rect2(170, 0, 85, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5kla"]
atlas = ExtResource("3_sehvh")
region = Rect2(255, 0, 85, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d07jk"]
atlas = ExtResource("4_jxcxa")
region = Rect2(0, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_kktwi"]
atlas = ExtResource("4_jxcxa")
region = Rect2(46, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_jiyb0"]
atlas = ExtResource("4_jxcxa")
region = Rect2(92, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk5ip"]
atlas = ExtResource("4_jxcxa")
region = Rect2(138, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_swdxg"]
atlas = ExtResource("7_luvhc")
region = Rect2(0, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl1uw"]
atlas = ExtResource("7_luvhc")
region = Rect2(46, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtjpb"]
atlas = ExtResource("7_luvhc")
region = Rect2(92, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_npup3"]
atlas = ExtResource("7_luvhc")
region = Rect2(138, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwce6"]
atlas = ExtResource("2_55ax7")
region = Rect2(0, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_on4uy"]
atlas = ExtResource("2_55ax7")
region = Rect2(46, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7xgv"]
atlas = ExtResource("2_55ax7")
region = Rect2(92, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_32f02"]
atlas = ExtResource("2_55ax7")
region = Rect2(138, 0, 46, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_iqltu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qc354")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nswtd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkit2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bqif")
}],
"loop": true,
"name": &"dash_no_claw",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u65pw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ipgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cd0ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5kla")
}],
"loop": true,
"name": &"dash_one_claw",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d07jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kktwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jiyb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk5ip")
}],
"loop": true,
"name": &"dash_two_claw",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_swdxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl1uw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtjpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npup3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwce6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_on4uy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7xgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32f02")
}],
"loop": true,
"name": &"mouvement",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xw04m"]
radius = 9.82533
height = 27.8141

[node name="lobster" type="CharacterBody2D"]
script = ExtResource("1_spkl0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_iqltu")
animation = &"dash_one_claw"
autoplay = "idle"
frame_progress = 0.415281
flip_h = true
script = ExtResource("7_852w0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.86242e-09, -1.19209e-07)
rotation = -1.57716
scale = Vector2(0.814853, 1.29428)
shape = SubResource("CapsuleShape2D_xw04m")

[node name="Muzzle" type="Marker2D" parent="CollisionShape2D"]
position = Vector2(7.62939e-06, -5.96046e-08)

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D/Muzzle"]
position = Vector2(87, -1)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_7ao7v")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.12

[node name="WalkingAudioStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_5ubgf")

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_animation_looped"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
